--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front",
   "version": "1.0.0",
   "description": "",
-  "main": "../yabloko_frontend/public/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "npm run compile:templates",
