--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "hbs": "^4.2.0",
+    "hbs": "^4.2.0"
+  },
+  "devDependencies": {
+    "handlebars": "^4.7.8",
     "nodemon": "^3.1.10"
   }
 }
