--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"@babel/preset-typescript": "^7.27.1",
 		"@typescript-eslint/eslint-plugin": "^8.46.0",
 		"@typescript-eslint/parser": "^8.46.0",
-		"css-loader": "^7.1.2",
+		"css-loader": "^6.11.0",
 		"eslint": "^9.37.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-compat": "^6.0.2",
@@ -42,11 +42,13 @@
 		"nodemon": "^3.1.10",
 		"prettier": "^3.6.2",
 		"prettier-plugin-organize-imports": "^4.3.0",
+		"sass": "^1.93.3",
+		"sass-loader": "^16.0.6",
 		"string-replace-loader": "^3.2.0",
-		"style-loader": "^4.0.0",
+		"style-loader": "^3.3.4",
 		"ts-loader": "^9.5.4",
 		"typescript": "^5.9.3",
-		"webpack": "^5.102.0",
+		"webpack": "^5.102.1",
 		"webpack-cli": "^6.0.1"
 	},
 	"lint-staged": {
