--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@antiquemouse/framework": "^1.0.1",
 		"@babel/preset-react": "^7.27.1",
 		"babel-loader": "^10.0.0",
 		"custom-tsx": "file:./custom-tsx",
