--- a/support/Dockerfile
+++ b/support/Dockerfile
@@ -3,11 +3,9 @@ FROM node:24
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 
 COPY . .
-
-RUN npm run bundle
 
 EXPOSE 3001
 
