--- a/support/package.json
+++ b/support/package.json
@@ -15,6 +15,7 @@
 		"@babel/core": "^7.28.5",
 		"@babel/preset-env": "^7.28.5",
 		"@babel/preset-react": "^7.28.5",
+		"@babel/preset-typescript": "^7.28.5",
 		"babel-loader": "^10.0.0",
 		"css-loader": "^6.8.0",
 		"html-webpack-plugin": "^5.5.0",
