--- a/support/package.json
+++ b/support/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "support-app",
 	"version": "1.0.0",
+	"type": "module",
 	"scripts": {
 		"build": "webpack --mode production",
 		"dev": "webpack serve --mode development --port 3001",
