--- a/support/Dockerfile
+++ b/support/Dockerfile
@@ -3,7 +3,7 @@ FROM node:24
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install --legacy-peer-deps
+RUN npm install
 
 COPY . .
 RUN npm run bundle
